--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
   "name": "trpg-web-tool",
   "version": "1.0.0",
-  "description": "Nuxt.js project",
-  "author": "sizukutamago@gmail.com",
+  "description": "My stunning Nuxt.js project",
+  "author": "Ivory95",
   "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "generate": "nuxt generate"
   },
   "dependencies": {
+    "cross-env": "^5.2.0",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^4.19.1",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "node-sass": "^4.9.4",
+    "nodemon": "^1.11.0",
+    "sass-loader": "^7.1.0"
   }
 }
